<resources>
    <string name="app_name">upskill</string>

    <!--    Login    -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="have_an_account">Don\'t have an account? <font fgcolor="#ffff0000"><b>Signup</b></font></string>

    <!--    Signup    -->
    <string name="signup">Signup</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>

    <!--    Login Validation    -->
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">invalid password</string>


    <!--    Signup Validation    -->
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">invalid last name</string>
    <string name="invalid_email">Invalid email</string>

    <!--    Network Validation    -->
    <string name="success">Success</string>

</resources>