<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.hcl.upskill.model.request.auth.SignupModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_200"

            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart"
            app:layout_constraintTop_toTopOf="@+id/guideTop"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:strokeColor="@color/grey"
            app:strokeWidth="@dimen/dp_0.1" />



        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="@+id/ivProfile"
            app:layout_constraintStart_toStartOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="@+id/ivProfile" />


        <ImageView
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/camera"
            app:layout_constraintBottom_toBottomOf="@+id/ivProfile"
            app:layout_constraintEnd_toEndOf="@+id/ivProfile"
            app:layout_constraintTop_toTopOf="@+id/ivProfile"
            app:layout_constraintVertical_bias="0.84000003" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            style="@style/formInputLayoutNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toStartOf="@+id/tilLastName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideStart"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="14"
                android:singleLine="true"
                android:text="@={model.first_name}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            style="@style/formInputLayoutNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:hint="@string/last_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/tilFirstName"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tilFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="14"
                android:singleLine="true"
                android:text="@={model.last_name}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/formInputLayoutNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:hint="@string/email"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="@={model.email}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/formInputLayoutNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:hint="@string/username"
            app:layout_constraintEnd_toStartOf="@+id/guideEnd"
            app:layout_constraintStart_toStartOf="@+id/guideStart"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="14"
                android:singleLine="true"
                android:text="@={model.username}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/formInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="@+id/tilUsername"
            app:layout_constraintStart_toStartOf="@+id/tilUsername"
            app:layout_constraintTop_toBottomOf="@+id/tilUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="14"
                android:singleLine="true"
                android:text="@={model.password}"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_55"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tilPassword"
            app:layout_constraintStart_toStartOf="@+id/tilPassword"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintVertical_bias="0.48000002" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.90" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
